[project]
name = "dpgcontainers"
version = "0.1.1"
description = "Functional dataclass implementations for DearPyGUI container types"
readme = "README.md"
authors = [
    { name = "Zachary Parmley", email = "zachary.parmley@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dearpygui>=2.0.0",
    "dpgmagictag>=0.1.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: User Interfaces",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
